tests/errors/scalar_body_new_returns_string.dang
# A scalar's new() hook computes the canonical underlying string, so its
# body must return String!.
scalar Port {
  new(raw: String!) {
    42
  }
}
